@@ -501,27 +501,19 @@ name|Explanation
 name|result
 init|=
 operator|new
-name|Explanation
-argument_list|()
-decl_stmt|;
-name|result
-operator|.
-name|setDescription
+name|ComplexExplanation
 argument_list|(
+literal|true
+argument_list|,
+name|sc
+argument_list|,
 literal|"FunctionQuery("
 operator|+
 name|func
 operator|+
 literal|"), product of:"
 argument_list|)
-expr_stmt|;
-name|result
-operator|.
-name|setValue
-argument_list|(
-name|sc
-argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|result
 operator|.
 name|addDetail
